# Nexium

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  TODO
.github/workflows/: cmake-multi-platform.yml
assets/: brdf_lut_512_rg16_float.raw
cmake/: EmbedAssets.cmake  EmbedShaders.cmake  HyperionConfig.cmake.in
include/Hyperion/: HP_Audio.h  HP_BitUtils.h  HP_Codepoint.h  HP_Core.h  HP_Image.h  HP_Init.h  HP_Macros.h  HP_Math.h  HP_Platform.h  HP_Rand.h  HP_Render.h  Hyperion.h
include/NX/: NX_API.h  NX_Animation.h  NX_AnimationPlayer.h  NX_Audio.h  NX_AudioClip.h  NX_AudioStream.h  NX_BitUtils.h  NX_Camera.h  NX_Clipboard.h  NX_Codepoint.h  NX_Core.h  NX_Cubemap.h  NX_DataCodec.h  NX_Display.h  NX_DynamicMesh.h  NX_Environment.h  NX_Filesystem.h  NX_Font.h  NX_Gamepad.h  NX_Image.h  NX_IndirectLight.h  NX_Init.h  NX_InstanceBuffer.h  NX_Keyboard.h  NX_Light.h  NX_Log.h  NX_Macros.h  NX_Material.h  NX_Math.h  NX_Memory.h  NX_Mesh.h  NX_MeshData.h  NX_Model.h  NX_Mouse.h  NX_Platform.h  NX_Probe.h  NX_Rand.h  NX_Random.h  NX_ReflectionProbe.h  NX_Render.h  (+12 more)
scripts/: bin2c.py  glsl_processor.py
shaders/common/: cube.vert  screen.vert
shaders/include/: billboard.glsl  color.glsl  draw.glsl  environment.glsl  fog.glsl  frame.glsl  frustum.glsl  lights.glsl  material.glsl  math.glsl  pbr.glsl  utils.glsl
shaders/include/template/: scene.frag  scene.vert  shape.frag  shape.vert
shaders/overlay/: generic.frag  generic.vert  overlay.frag  shape.frag  shape.vert
shaders/override/: scene.frag  scene.vert  shape.frag  shape.vert
shaders/process/: bilateral_blur.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  cubemap_from_equirectangular.frag  cubemap_irradiance.comp  cubemap_irradiance.frag  cubemap_prefilter.comp  cubemap_prefilter.frag  cubemap_skybox.frag  downsampling.frag  edge_aware_blur.frag  screen_quad.frag  shadow_bilateral_blur.frag  shadow_gaussian_blur.frag  ssao_bilateral_blur.frag  ssao_pass.frag  upsampling.frag
shaders/scene/: bloom_post.frag  depth.frag  depth.vert  forward.frag  forward.vert  light_culling.comp  output.frag  prepass.frag  prepass.vert  scene.vert  scene_lit.frag  scene_prepass.frag  scene_prepass.vert  scene_shadow.frag  scene_shadow.vert  scene_unlit.frag  scene_wireframe.geom  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao_post.frag
source/: HP_Audio.cpp  HP_Codepoint.c  HP_Core.cpp  HP_Image.c  HP_Init.cpp  HP_Math.c  HP_Rand.cpp  HP_Render.cpp  INX_AssetDecoder.hpp  INX_AudioFormat.hpp  INX_AudioUtils.hpp  INX_BuildInfo.hpp  INX_Frustum.hpp  INX_GPUBridge.hpp  INX_GPUProgramCache.cpp  INX_GPUProgramCache.hpp  INX_GlobalAssets.cpp  INX_GlobalAssets.hpp  INX_GlobalPool.cpp  INX_GlobalPool.hpp  INX_GlobalState.cpp  INX_GlobalState.h  INX_GlobalState.hpp  INX_PoolAssets.cpp  INX_PoolAssets.hpp  INX_RenderUtils.hpp  INX_Shader.hpp  INX_Utils.cpp  INX_Utils.hpp  INX_VariantMesh.hpp  INX_ViewFrustum.hpp  NX_Animation.cpp  NX_AnimationPlayer.cpp  NX_Audio.c  NX_Audio.cpp  NX_Audio.hpp  NX_AudioClip.cpp  NX_AudioClip.hpp  NX_AudioStream.cpp  NX_AudioStream.hpp  (+66 more)
source/Assets/: ShaderDecoder.hpp
source/Audio/: HP_AudioClip.cpp  HP_AudioClip.hpp  HP_AudioFormat.hpp  HP_AudioState.cpp  HP_AudioState.hpp  HP_AudioStream.cpp  HP_AudioStream.hpp  NX_AudioClip.cpp  NX_AudioClip.hpp  NX_AudioFormat.hpp  NX_AudioState.cpp  NX_AudioState.hpp  NX_AudioStream.cpp  NX_AudioStream.hpp
source/Core/: HP_CoreState.cpp  HP_CoreState.hpp  HP_InternalLog.hpp  NX_CoreState.cpp  NX_CoreState.hpp  NX_InternalLog.hpp
source/Detail/: BuildInfo.hpp  Helper.cpp  Helper.hpp  Simd.hpp
source/Detail/GPU/: Buffer.cpp  Buffer.hpp  CheckError.hpp  Framebuffer.cpp  Framebuffer.hpp  MipBuffer.hpp  Pipeline.hpp  Program.hpp  Shader.hpp  StagingBuffer.hpp  SwapBuffer.hpp  Texture.cpp  Texture.hpp  TextureView.hpp  Translation.hpp  VertexArray.cpp  VertexArray.hpp
source/Detail/Util/: BucketArray.hpp  DynamicArray.hpp  FixedArray.hpp  Memory.hpp  ObjectPool.hpp  ObjectRing.hpp  Ranges.hpp  StaticArray.hpp  String.hpp
source/Importer/: AnimationImporter.hpp  AssimpHelper.hpp  BoneImporter.hpp  MaterialImporter.hpp  MeshImporter.hpp  SceneImporter.hpp  SkeletonImporter.hpp  TextureLoader.hpp
source/Render/: HP_Cubemap.cpp  HP_Cubemap.hpp  HP_Font.cpp  HP_Font.hpp  HP_InstanceBuffer.hpp  HP_Light.cpp  HP_Light.hpp  HP_MaterialShader.cpp  HP_MaterialShader.hpp  HP_ReflectionProbe.cpp  HP_ReflectionProbe.hpp  HP_RenderState.hpp  HP_RenderTexture.hpp  HP_Texture.hpp  HP_VertexBuffer.hpp  NX_Cubemap.cpp  NX_Cubemap.hpp  NX_DynamicMesh.hpp  NX_Font.cpp  NX_Font.hpp  NX_InstanceBuffer.hpp  NX_Light.cpp  NX_Light.hpp  NX_MaterialShader.cpp  NX_MaterialShader.hpp  NX_ReflectionProbe.cpp  NX_ReflectionProbe.hpp  NX_RenderState.hpp  NX_RenderTexture.hpp  NX_Shader.cpp  NX_Shader.hpp  NX_Shader2D.cpp  NX_Shader2D.hpp  NX_Shader3D.cpp  NX_Shader3D.hpp  NX_Texture.hpp  NX_VertexBuffer.hpp
source/Render/Core/: AssetCache.cpp  AssetCache.hpp  Helper.hpp  PoolCubemap.cpp  PoolCubemap.hpp  PoolFont.hpp  PoolMesh.hpp  PoolModel.cpp  PoolModel.hpp  PoolTexture.hpp  ProgramCache.cpp  ProgramCache.hpp  ShaderOverride.hpp  SharedAssets.cpp  SharedAssets.hpp
source/Render/Overlay/: DrawCall.hpp  Overlay.cpp  Overlay.hpp
source/Render/Scene/: BoneBuffer.hpp  BoneBufferManager.hpp  Culling.hpp  DrawCall.hpp  DrawCallManager.hpp  DrawData.hpp  Environment.hpp  Frustum.hpp  LightManager.cpp  Scene.cpp  (+12 more)
tests/: CMakeLists.txt  animation.c  billboard.c  bloom.c  bunnymark.c  common.h  custom_pass.c  dynamic_mesh.c  fog.c  frustum_culling.c  gamepad.c  instanced.c  instanced_material_shader.c  lights.c  material_shader.c  overlay.c  pbr.c  post_process.c  reflection_probe.c  render_texture.c  shading_mode.c  shadows.c  shape_2d.c  skybox.c  skybox_procedural.c  sponza.c  ssao.c  streams.c
tests/resources/audio/: sine.flac
tests/resources/shaders/: instanced_material.frag  instanced_material.vert  material.frag  material.vert  scanline.frag
(+12 files in other folders)
